Fixed 3d element canvas scaling on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   font-family: "JetBrains Mono", sans-serif;
   scroll-behavior: smooth;
-  color-scheme: light;
+  color-scheme: dark;
 }
 
 .hash-span {
